--- a/Artistoo/examples/html/MyFirstSimulation.html
+++ b/Artistoo/examples/html/MyFirstSimulation.html
@@ -101,7 +101,7 @@ function buildChannel(){
     this.channelvoxels = []
     const xOffset = 30, yOffset = 30
     const grid = 3
-    const dx = Math.floor( this.C.extents[0]/grid ), dy = Math.floor( this.C.extents[1]/grid )
+    const dx = Math.floor( this.C.extents[0]/grid ), dy = Math.floor( this.C.extents[1]/gird )
     const radius = 10
     
     for( let x = xOffset; x < this.C.extents[0]; x+= dx ){
