--- a/Artistoo_Proj/Project_Simulation.html
+++ b/Artistoo_Proj/Project_Simulation.html
@@ -13,7 +13,7 @@ body{
 </style>
 
 <!-- Sourcing the cpm build -->
-<script src="test.js"></script>
+<script src="simulation.js"></script>
 <script src="fpsmeter.min.js"></script>
 <script>
 "use strict"
