--- a/Artistoo_Proj/Project_Simulation.html
+++ b/Artistoo_Proj/Project_Simulation.html
@@ -5,7 +5,7 @@ Project_Simulation.html
 <html lang="en">
 <head><meta http-equiv="Content-Type" content="text/html;
 charset=UTF-8">
-<title>Assignment 1</title>
+<title>Natural Computing project</title>
 <style type="text/css"> 
 body{
     font-family: "HelveticaNeue-Light", sans-serif; padding : 15px;
